# GoTools

./: CMakeLists.txt  TODO
compositemodel/: CMakeLists.txt
gotools-core/: CMakeLists.txt
igeslib/: CMakeLists.txt
implicitization/: CMakeLists.txt
intersections/: CMakeLists.txt
isogeometric_model/: CMakeLists.txt
lrsplines2D/: CMakeLists.txt
parametrization/: CMakeLists.txt
qualitymodule/: CMakeLists.txt
topology/: CMakeLists.txt
trivariate/: CMakeLists.txt
trivariatemodel/: CMakeLists.txt
viewlib/: CMakeLists.txt
